fix responsive stars + About page collapse

--- a/frontend/src/styles/components/_Collapse.scss
+++ b/frontend/src/styles/components/_Collapse.scss
@@ -3,17 +3,16 @@
     flex-direction: column;
     align-items: center;
     font-size: 18px;
-    margin: 0 60px 33px;
+    // margin: 0 60px 33px;
 
     &__button {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 5px;
+        padding: 1rem;
         background-color: $color-primary;
-        border-radius: 5px;
+        border-radius: 10px;
         color: $color-white;
-        padding: 10px;
         font-weight: 500;
         min-width: 100%;
         cursor: pointer;
@@ -24,5 +23,6 @@
         color: $color-primary;
         padding: 20px 10px 10px;
         border-radius: 0 0 10px 5px;
+        width: 100%;
     }
 }
