--- a/frontend/src/styles/pages/_About.scss
+++ b/frontend/src/styles/pages/_About.scss
@@ -6,11 +6,12 @@
     min-height: 370px;
     width: 80%;
     margin: auto;
+    row-gap: 1rem;
 }
 
 .collapse {
     width: 100%;
-    font-size: 24px;
+    // font-size: 24px;
 }
 
 @media #{$mobile-screen} {
