--- a/frontend/src/styles/pages/_Lodging.scss
+++ b/frontend/src/styles/pages/_Lodging.scss
@@ -3,15 +3,18 @@
     justify-content: space-between;
     width: 100%;
 
+    &__container {
+        width: 75%;
+        margin: 2rem 0;
+    }
+
     &__title {
         font-size: 2.25rem; // 36px
-        margin-top: 2rem;
     }
 
     &__location {
         font-size: 1.2rem; // 18px
-        margin-top: 0.5rem;
-        margin-bottom: 2rem;
+        margin: 0.5rem 0 2rem;
     }
 }
 
@@ -60,6 +63,7 @@
 
     &__rate {
         width: 100%;
+        white-space: nowrap;
     }
 }
 
@@ -85,21 +89,21 @@
     justify-content: space-between;
     width: 100%;
 
-
     &__details {
         width: 48%;
-    }
-
-    &__title {
         font-size: 1.2rem;
-        color: $color-white;
-        background-color: $color-primary;
-        border-radius: 5px;
-        padding: 0.75rem 1rem;
     }
 
-    &__text {
-        padding: 2rem 1.5rem;
+    // &__title {
+    //     font-size: 1.2rem;
+    //     color: $color-white;
+    //     background-color: $color-primary;
+    //     border-radius: 5px;
+    //     padding: 0.75rem 1rem;
+    // }
+
+    &__list {
+        width: 100%;
         font-size: 1.2rem; // 18px
         text-align: justify;
         background-color: $color-secondary;
@@ -153,7 +157,7 @@
             font-size: 0.8rem; // 13px
         }
 
-        &__text {
+        &__list {
             font-size: 0.75rem;
         }
     }
